# -projetc-team-05

./: .gitignore  Notebook.py  README.md  addressbook.pkl  main.py  pyproject.toml  sdf.pkl  task.requirements.txt
ccnb/: __main__.py
ccnb/src/: AddressBook.py  Bot.py  NoteBook.py  Validator.py  data_base.py  models.py  tests.py
src/: AddressBook.py  Bot.py  NoteBook.py  Validator.py  data_base.py  models.py  normalize_phone.py  tests.py
